--- a/nivel_1/index.html
+++ b/nivel_1/index.html
@@ -1,41 +1,12 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Ejercicio letras repetidas</title>
-<script>
-
-  //Ejercicio 1
-  
-var letras=["M", "A", "R", "I", "A", " ", "C", "A", "S", "S", "A", "N", "D", "R", "A"];
-
-var contador=0;
-
-while(contador<letras.length) {
-
-    document.write(letras[contador] + "<br>");
-
-    contador++;
-
-}
-
-//Ejercicio 2
-  
-  
-//Ejercicio 3
-  
-  
-//Ejercicio 4
-  
-
-
-  
-</script>
-
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Letras repetidas</title>
 </head>
-
 <body>
+    <h1>Letras repetidas</h1>
+    <script src="main.js"></script>
 </body>
 </html>
